crates/pixi-build-r/src/snapshots/pixi_build_r__tests__r_package_with_native_code.snap
---
source: crates/pixi-build-r/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: r-testpkg
  version: 1.0.0
source: []
build:
  number: ~
  script:
    content: "[build_script]"
    env: {}
    secrets: []
requirements:
  build:
    - "${{ compiler('c') }}"
    - "${{ compiler('cxx') }}"
    - "${{ compiler('fortran') }}"
  host:
    - r-base
  run:
    - r-base
  run_constraints: []
tests: []
about:
  homepage: ~
  license: GPL-3.0-only
  license_file: ~
  summary: Test Package
  description: A test package
  documentation: ~
  repository: ~
extra: ~
